# ai-launcher

./: PKGBUILD  README.md
.github/: PERFORMANCE_SUMMARY.md  WORKFLOW_OPTIMIZATIONS.md
.github/workflows/: build-release.yml  testing.yml
backend/: .gitignore  assistant.py  file_rag.py  main.py  pyproject.toml  rag.py  server.py  server.spec  track_files.py
backend/config/: __init__.py  app_config.py
backend/notebooks/: ai_agents.ipynb
backend/notes/: notes.py
backend/routers/: models.py  notes.py
backend/src/: chunk.py  ingest.py  llm.py  rag.py  retriever.py
backend/src/common_types/: base.py
backend/src/embedders/: base.py  ollama_embedding.py
backend/src/handlers/: file_handler.py
backend/src/modules/: rag.py
backend/src/parsers/: base.py  simple_parser.py
backend/src/retrievers/: base.py  simple_retriever.py
backend/src/stores/: base.py  chroma_store.py
backend/src/test_splitters/: recursive_splitter.py  simple_text_splitter.py
backend/src/utils/: track_files.py
backend/src/utils/adapters/: unstructured.py
backend/tests/apis/: test_config_api.py  test_models_streaming.py
backend/tests/config/: test_app_config.py
backend/tests/utils/: test_track_files.py
frontend/: .gitignore  forge.config.ts  index.html  package.json  pnpm-lock.yaml  vite.renderer.config.ts
frontend/electron/: main.ts  preload.ts  storage.test.ts  storage.ts
frontend/src/: app.tsx  renderer.ts
ui/: .gitignore  README.md  forge.config.ts  package-lock.json  package.json
ui/src/: App.tsx  main.ts  preload.ts  renderer.ts
ui/src/components/: Editor.tsx  (+9 more)
(+15 files in other folders)
