[project]
name = "ai-assitant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie>=1.2.1",
    "chromadb>=1.0.20",
    "dspy>=2.6.27",
    "fastapi>=0.116.1",
    "ollama>=0.5.3",
    "platformdirs>=4.4.0",
    "pytest-mock>=3.15.1",
]


[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "mlflow>=3.1.4",
    "pyinstaller>=6.15.0",
    "ruff>=0.12.7",
    "pytest>=8.4.1",
    "pyright>=1.1.404",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
